--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booleaner</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <header>
+    <div class="bg-header">
+      <img class="logo-booleaner" src="./img/logo.svg" alt="logo The Booleaner" >
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
   
 </body>
 </html>
