title and written by

--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
       <img class="logo-booleaner" src="./img/logo.svg" alt="logo The Booleaner" >
     </div>
   </header>
-  <main></main>
+
+  <main>
+
+    <!-- Titolo, autore, data -->
+    <section>
+      <h1>
+        Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+      </h1>
+      
+      <div class="text-date-written-by">
+        <p class="written-by">
+          Scritto da <span class="author">The Booleaner</span>
+        </p>
+        <p>
+          il 10/10/2020
+        </p>
+      </div>
+    </section>
+
+    
+
+  </main>
+
   <footer></footer>
   
 </body>
