main title size and Tim photos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Titolo, autore, data -->
     <section>
-      <h1>
+      <h1 class="title-size">
         Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
       </h1>
       
@@ -31,7 +31,13 @@
       </div>
     </section>
 
-    
+    <!-- Foto Tim Berners-Lee -->
+    <section>
+      <img src="./img/tim-1.jpg" alt="Tim Berners-Lee photo">
+      <img src="./img/tim-2.jpg" alt="Tim Berners-Lee photo">
+    </section>
+
+
 
   </main>
 
