caption text size, p with highlighted text, list

--- a/index.html
+++ b/index.html
@@ -34,8 +34,34 @@
     <!-- Foto Tim Berners-Lee -->
     <section>
       <img src="./img/tim-1.jpg" alt="Tim Berners-Lee photo">
-      <img src="./img/tim-2.jpg" alt="Tim Berners-Lee photo">
+      <img src="./img/tim-2.jpg" alt="Tim Berners-Lee photo"><br>
+      <p class="caption-text">
+        1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>
+        2nd Photo: Wikimedia, by Paul Clarke
+      </p>
     </section>
+
+    <!-- Primo Lorem e elenco puntato -->
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum soluta neque quod ipsum unde iste eligendi vel consectetur iusto? Velit obcaecati eveniet tempore a minus inventore dignissimos laudantium earum?
+        Suscipit amet labore <span class="highlighted-text">facere sint dignissimos natus ex possimus nobis eveniet quam exercitationem earum excepturi</span> maxime est repellat tempore perspiciatis hic sequi alias, in soluta? Hic deleniti consectetur velit ad.
+        Praesentium ipsa modi provident omnis vel nam sit, dolores, nemo explicabo ad veniam quidem fugit aliquid illo similique qui id corrupti at necessitatibus tempora recusandae iure perspiciatis. Ut, adipisci voluptates.
+      </p>
+
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum consequatur dolor eaque a molestias dolore sapiente veniam! Necessitatibus modi error doloribus eligendi dolorem quae, non nobis a omnis enim.
+        </li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum consequatur dolor eaque a molestias dolore sapiente veniam! Necessitatibus modi error doloribus eligendi dolorem quae, non nobis a omnis enim.
+        </li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum consequatur dolor eaque a molestias dolore sapiente veniam! Necessitatibus modi error doloribus eligendi dolorem quae, non nobis a omnis enim.
+        </li>
+      </ul>
+    </section>
+    
 
 
 
