--- a/index.html
+++ b/index.html
@@ -61,6 +61,58 @@
         </li>
       </ul>
     </section>
+
+    <!-- Tabella -->
+    <table>
+      <thead>
+        <tr>
+          <th>
+            Lorem ipsum dolor
+          </th>
+          <th>
+            Lorem ipsum dolor
+          </th>
+          <th>
+            Lorem ipsum dolor
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="row-light-blue">
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe laboriosam a maiores expedita incidunt. Quisquam eos, harum modi quis, officia rerum dolor mollitia voluptate dolorum, quia laboriosam nemo. Quae, perferendis.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe laboriosam a maiores expedita incidunt. Quisquam eos, harum modi quis, officia rerum dolor mollitia voluptate dolorum, quia laboriosam nemo. Quae, perferendis.
+          </td>
+        </tr>
+        <tr class="row-light-blue">
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor
+          </td>
+          <td>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe laboriosam a maiores expedita incidunt. Quisquam eos, harum modi quis, officia rerum dolor mollitia voluptate dolorum, quia laboriosam nemo. Quae, perferendis.
+          </td>
+        </tr>
+      </tbody>
+    </table>
     
 
 
