last paragraph and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
       </h1>
       
-      <div class="text-date-written-by">
+      <div class="text-darkgrey">
         <p class="written-by">
           Scritto da <span class="author">The Booleaner</span>
         </p>
@@ -114,12 +114,26 @@
       </tbody>
     </table>
     
-
-
-
+    <!-- Secondo Lorem -->
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum soluta neque quod ipsum unde iste eligendi vel consectetur iusto? Velit obcaecati eveniet tempore a minus inventore dignissimos laudantium earum?
+        Suscipit amet labore facere sint dignissimos natus ex possimus nobis eveniet quam exercitationem earum excepturi maxime est repellat tempore perspiciatis hic sequi alias, in soluta? Hic deleniti consectetur velit ad.
+        Praesentium ipsa modi provident omnis vel nam sit, <span class="highlighted-text">dolores, nemo explicabo ad veniam quidem fugit aliquid illo similique qui id corrupti at necessitatibus</span> tempora recusandae iure perspiciatis. Ut, adipisci voluptates.
+    </p>
   </main>
 
-  <footer></footer>
+  <footer>
+    <h2 class="text-darkgrey">
+      Potrebbero interessarti
+    </h2>
+
+    <p class="text-white bg-monitor">
+      Lorem ipsum dolor
+    </p>
+    <p class="text-white bg-graph">
+      Lorem ipsum dolor
+    </p>
+  </footer>
   
 </body>
 </html>
