--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
     </table>
     
     <!-- Secondo Lorem -->
-    <p>
+    <section>
+      <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum soluta neque quod ipsum unde iste eligendi vel consectetur iusto? Velit obcaecati eveniet tempore a minus inventore dignissimos laudantium earum?
         Suscipit amet labore facere sint dignissimos natus ex possimus nobis eveniet quam exercitationem earum excepturi maxime est repellat tempore perspiciatis hic sequi alias, in soluta? Hic deleniti consectetur velit ad.
         Praesentium ipsa modi provident omnis vel nam sit, <span class="highlighted-text">dolores, nemo explicabo ad veniam quidem fugit aliquid illo similique qui id corrupti at necessitatibus</span> tempora recusandae iure perspiciatis. Ut, adipisci voluptates.
-    </p>
+      </p>
+    </section>
   </main>
 
   <!-- Footer -->
