change section -> div

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     </section>
 
     <!-- Foto Tim Berners-Lee -->
-    <section>
+    <div>
       <img src="./img/tim-1.jpg" alt="Tim Berners-Lee photo">
       <img src="./img/tim-2.jpg" alt="Tim Berners-Lee photo"><br>
       <p class="caption-text">
         1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>
         2nd Photo: Wikimedia, by Paul Clarke
       </p>
-    </section>
+    </div>
 
     <!-- Primo Lorem e elenco puntato -->
-    <section>
+    <div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum soluta neque quod ipsum unde iste eligendi vel consectetur iusto? Velit obcaecati eveniet tempore a minus inventore dignissimos laudantium earum?
         Suscipit amet labore <span class="highlighted-text">facere sint dignissimos natus ex possimus nobis eveniet quam exercitationem earum excepturi</span> maxime est repellat tempore perspiciatis hic sequi alias, in soluta? Hic deleniti consectetur velit ad.
@@ -60,7 +60,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa harum consequatur dolor eaque a molestias dolore sapiente veniam! Necessitatibus modi error doloribus eligendi dolorem quae, non nobis a omnis enim.
         </li>
       </ul>
-    </section>
+    </div>
 
     <!-- Tabella -->
     <table>
@@ -115,13 +115,13 @@
     </table>
     
     <!-- Secondo Lorem -->
-    <section>
+    <div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum soluta neque quod ipsum unde iste eligendi vel consectetur iusto? Velit obcaecati eveniet tempore a minus inventore dignissimos laudantium earum?
         Suscipit amet labore facere sint dignissimos natus ex possimus nobis eveniet quam exercitationem earum excepturi maxime est repellat tempore perspiciatis hic sequi alias, in soluta? Hic deleniti consectetur velit ad.
         Praesentium ipsa modi provident omnis vel nam sit, <span class="highlighted-text">dolores, nemo explicabo ad veniam quidem fugit aliquid illo similique qui id corrupti at necessitatibus</span> tempora recusandae iure perspiciatis. Ut, adipisci voluptates.
       </p>
-    </section>
+    </div>
   </main>
 
   <!-- Footer -->
